Fix table behavor on mobile

--- a/styles/taiwindcss.css
+++ b/styles/taiwindcss.css
@@ -15,6 +15,10 @@
     font-weight: 500;
     font-family: "JetBrains Mono", sans-serif;
   }
+
+  .markdown-table th:first-child {
+    position: relative !important;
+  }
 }
 
 @layer components {
